select (nodes) sends current set to kernel

--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -257,6 +257,10 @@
     "       self.status += \"msgFromBrowser has arrived: %f\\n\" % time.time()\n",
     "       rawMessage = change['new']\n",
     "       self._incomingMessage = json.loads(rawMessage)\n",
+    "       cmd = self._incomingMessage[\"cmd\"]\n",
+    "       self.status += \"msg: %s\\n\"  % cmd\n",
+    "       if(cmd == \"updateSelectedNodes\"):\n",
+    "          self.selectedNodes = self._incomingMessage[\"payload\"]\n",
     "         \n",
     "    def getResponse(self):\n",
     "       return(self._incomingMessage[\"payload\"])\n",
@@ -268,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -356,12 +360,25 @@
        "            console.log(\"--- about to call loadGraph\")\n",
        "            cyjsWidget.loadGraph(\"priyanka.json\");\n",
        "            cyjsWidget.loadStyle(\"style.js\");\n",
+       "            cyjsWidget.cy.layout({\"name\": \"grid\"});\n",
        "            console.log(\"    back from loadGraph\")\n",
-       "            cyjsWidget.cy.on(\"select\", function(x){\n",
-       "                var selectedNodeCount = cyjsWidget.cy.nodes(\":selected\").length;\n",
-       "                var selectedEdgeCount = cyjsWidget.cy.edges(\":selected\").length;\n",
+       "            cyjsWidget.cy.on(\"select\", function(){\n",
+       "                var selectedNodes = cyjsWidget.cy.nodes(\":selected\");\n",
+       "                var selectedNodeIDs = selectedNodes.map(function(n){return (n.id() )})\n",
+       "                var selectedEdges = cyjsWidget.cy.edges(\":selected\");\n",
+       "                var selectedNodeCount = selectedNodes.length;\n",
+       "                var selectedEdgeCount = selectedEdges.length;\n",
        "                console.log(\"selected nodes: \" + selectedNodeCount);\n",
-       "                console.log(\"selected edges:\" + selectedEdgeCount);\n",
+       "                console.log(\"selected edGes:\" + selectedEdgeCount);\n",
+       "                var jsonString = JSON.stringify({cmd: \"updateSelectedNodes\",\n",
+       "                                                status: \"request\",\n",
+       "                                                callback: \"\",\n",
+       "                                                payload: selectedNodeIDs});\n",
+       "                console.log(\" *** jsonString: \")\n",
+       "                console.log(jsonString);\n",
+       "                cyjsWidget.model.set(\"msgFromBrowser\", jsonString);\n",
+       "                console.log(\"    after setting 'msgFromBrowser\");\n",
+       "                cyjsWidget.touch();\n",
        "                });\n",
        "            cyjsWidget.cy.on(\"unselect\", function(x){\n",
        "                var selectedNodeCount = cyjsWidget.cy.nodes(\":selected\").length;\n",
@@ -412,6 +429,7 @@
        "                    console.log(\"edges: \" + network.elements.edges.length);\n",
        "                cyObj.add(network.elements);  // no positions yet\n",
        "                cyObj.nodes().map(function(node){node.data({degree: node.degree()})});\n",
+       "                cyObj.layout({\"name\": \"grid\"});\n",
        "                cyObj.fit(150);\n",
        "                }) // .done\n",
        "            .fail(function(jqxhr, settings, exception) {\n",
@@ -594,14 +612,12 @@
     "            console.log(\"--- about to call loadGraph\")\n",
     "            cyjsWidget.loadGraph(\"priyanka.json\");\n",
     "            cyjsWidget.loadStyle(\"style.js\");\n",
+    "            cyjsWidget.cy.layout({\"name\": \"grid\"});\n",
     "            console.log(\"    back from loadGraph\")\n",
-    "            cyjsWidget.cy.on(\"select\", function(x){\n",
-    "                var selectedNodeCount = cyjsWidget.cy.nodes(\":selected\").length;\n",
-    "                var selectedEdgeCount = cyjsWidget.cy.edges(\":selected\").length;\n",
-    "                console.log(\"selected nodes: \" + selectedNodeCount);\n",
-    "                console.log(\"selected edges:\" + selectedEdgeCount);\n",
-    "                });\n",
-    "            cyjsWidget.cy.on(\"unselect\", function(x){\n",
+    "            cyjsWidget.cy.on(\"select\", function(){\n",
+    "                upsateSelectionToKernel(cyjsWidget);\n",
+    "                 });\n",
+    "            cyjsWidget.cy.on(\"unselect\", function(){\n",
     "                var selectedNodeCount = cyjsWidget.cy.nodes(\":selected\").length;\n",
     "                var selectedEdgeCount = cyjsWidget.cy.edges(\":selected\").length;\n",
     "                console.log(\"selected nodes: \" + selectedNodeCount);\n",
@@ -610,6 +626,25 @@
     "            } // ready\n",
     "           })},\n",
     "\n",
+    "        updateSelectionToKernel: function(cyjsWidget){\n",
+    "           var selectedNodes = cyjsWidget.cy.nodes(\":selected\");\n",
+    "           var selectedNodeIDs = selectedNodes.map(function(n){return (n.id() )})\n",
+    "           var selectedEdges = cyjsWidget.cy.edges(\":selected\");\n",
+    "           var selectedNodeCount = selectedNodes.length;\n",
+    "           var selectedEdgeCount = selectedEdges.length;\n",
+    "           console.log(\"selected nodes: \" + selectedNodeCount);\n",
+    "           console.log(\"selected edGes:\" + selectedEdgeCount);\n",
+    "           var jsonString = JSON.stringify({cmd: \"updateSelectedNodes\",\n",
+    "                                            status: \"request\",\n",
+    "                                            callback: \"\",\n",
+    "                                            payload: selectedNodeIDs});\n",
+    "           console.log(\" *** jsonString: \")\n",
+    "           console.log(jsonString);\n",
+    "           cyjsWidget.model.set(\"msgFromBrowser\", jsonString);\n",
+    "           console.log(\"    after setting 'msgFromBrowser\");\n",
+    "           cyjsWidget.touch();\n",
+    "           }\n",
+    "        \n",
     "        loadStyle: function(filename){\n",
     "           var cyObj = this.cy;\n",
     "           console.log(\"cyjsWidget.loadStyle: \" + filename)\n",
@@ -650,6 +685,7 @@
     "                    console.log(\"edges: \" + network.elements.edges.length);\n",
     "                cyObj.add(network.elements);  // no positions yet\n",
     "                cyObj.nodes().map(function(node){node.data({degree: node.degree()})});\n",
+    "                cyObj.layout({\"name\": \"grid\"});\n",
     "                cyObj.fit(150);\n",
     "                }) // .done\n",
     "            .fail(function(jqxhr, settings, exception) {\n",
@@ -745,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -757,14 +793,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget": "e03de293d4fb49f48565080a7f510d6f"
+      "application/vnd.jupyter.widget": "40ba361c01dc4354b2f3acf25113a267"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -783,6 +819,28 @@
    "outputs": [],
    "source": [
     "cy.clearSelection()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0', '1', '2']"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cy.selectedNodes"
    ]
   },
   {
@@ -806,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -816,8 +874,12 @@
      "output_type": "stream",
      "text": [
       "initial status message\n",
-      "entering getSelectedNodes\n",
-      "msgFromBrowser has arrived: 1480541340.915815\n",
+      "msgFromBrowser has arrived: 1480543758.311883\n",
+      "msgFromBrowser has arrived: 1480543760.035023\n",
+      "msgFromBrowser has arrived: 1480543760.962081\n",
+      "msgFromBrowser has arrived: 1480543773.964064\n",
+      "msgFromBrowser has arrived: 1480543871.014011\n",
+      "msgFromBrowser has arrived: 1480543882.576188\n",
       "\n"
      ]
     }
