select and deselect now updates kernel _selectedNodes

--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +224,7 @@
     "    msgFromBrowser = Unicode(\"{}\").tag(sync=True)\n",
     "    _incomingMessage = {};\n",
     "    status = \"initial status message\\n\"\n",
-    "    selectedNodes = [];\n",
+    "    _selectedNodes = [];\n",
     "        \n",
     "    def setSize(self, width, height):\n",
     "      self.status += \"setSize(%d, %d)\\n\" % (width, height)\n",
@@ -237,13 +237,8 @@
     "                                              \"callback\": \"\", \"payload\": margin});\n",
     "        \n",
     "    def getSelectedNodes(self):\n",
-    "      #self.selectedNodes = [];\n",
-    "      self._incomingMessage = None;\n",
-    "      self.status += \"entering getSelectedNodes\\n\";\n",
-    "      self.msgFromKernel = json.dumps({\"cmd\": \"cleanSlate\", \"status\": \"request\", \"callback\": \"\", \"payload\":\"\"});\n",
-    "      self.msgFromKernel = json.dumps({\"cmd\": \"getSelectedNodes\", \"status\": \"request\",\n",
-    "                                       \"callback\": \"\", \"payload\": \"\"});\n",
-    "    \n",
+    "       return(self._selectedNodes);\n",
+    "\n",
     "    def selectNodes(self, nodes):\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"selectNodes\", \"status\": \"request\",\n",
     "                                       \"callback\": \"\", \"payload\": nodes});\n",
@@ -260,7 +255,7 @@
     "       cmd = self._incomingMessage[\"cmd\"]\n",
     "       self.status += \"msg: %s\\n\"  % cmd\n",
     "       if(cmd == \"updateSelectedNodes\"):\n",
-    "          self.selectedNodes = self._incomingMessage[\"payload\"]\n",
+    "          self._selectedNodes = self._incomingMessage[\"payload\"]\n",
     "         \n",
     "    def getResponse(self):\n",
     "       return(self._incomingMessage[\"payload\"])\n",
@@ -272,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
@@ -363,32 +358,36 @@
        "            cyjsWidget.cy.layout({\"name\": \"grid\"});\n",
        "            console.log(\"    back from loadGraph\")\n",
        "            cyjsWidget.cy.on(\"select\", function(){\n",
-       "                var selectedNodes = cyjsWidget.cy.nodes(\":selected\");\n",
-       "                var selectedNodeIDs = selectedNodes.map(function(n){return (n.id() )})\n",
-       "                var selectedEdges = cyjsWidget.cy.edges(\":selected\");\n",
-       "                var selectedNodeCount = selectedNodes.length;\n",
-       "                var selectedEdgeCount = selectedEdges.length;\n",
-       "                console.log(\"selected nodes: \" + selectedNodeCount);\n",
-       "                console.log(\"selected edGes:\" + selectedEdgeCount);\n",
-       "                var jsonString = JSON.stringify({cmd: \"updateSelectedNodes\",\n",
-       "                                                status: \"request\",\n",
-       "                                                callback: \"\",\n",
-       "                                                payload: selectedNodeIDs});\n",
-       "                console.log(\" *** jsonString: \")\n",
-       "                console.log(jsonString);\n",
-       "                cyjsWidget.model.set(\"msgFromBrowser\", jsonString);\n",
-       "                console.log(\"    after setting 'msgFromBrowser\");\n",
-       "                cyjsWidget.touch();\n",
-       "                });\n",
-       "            cyjsWidget.cy.on(\"unselect\", function(x){\n",
-       "                var selectedNodeCount = cyjsWidget.cy.nodes(\":selected\").length;\n",
-       "                var selectedEdgeCount = cyjsWidget.cy.edges(\":selected\").length;\n",
-       "                console.log(\"selected nodes: \" + selectedNodeCount);\n",
-       "                console.log(\"selected edges:\" + selectedEdgeCount);\n",
-       "                });\n",
+       "               console.log(\"calling updateSelectionToKernel, on select\");\n",
+       "               cyjsWidget.updateSelectionToKernel(cyjsWidget);\n",
+       "               });\n",
+       "            cyjsWidget.cy.on(\"unselect\", function(){\n",
+       "               console.log(\"calling updateSelectionToKernel, on unselect\");\n",
+       "               cyjsWidget.updateSelectionToKernel(cyjsWidget);\n",
+       "               });\n",
        "            } // ready\n",
        "           })},\n",
        "\n",
+       "        updateSelectionToKernel: function(cyjsWidget){\n",
+       "           console.log(\"*** entering updateSelectionToKernel\") \n",
+       "           var selectedNodes = cyjsWidget.cy.nodes(\":selected\");\n",
+       "           var selectedNodeIDs = selectedNodes.map(function(n){return (n.id() )})\n",
+       "           var selectedEdges = cyjsWidget.cy.edges(\":selected\");\n",
+       "           var selectedNodeCount = selectedNodes.length;\n",
+       "           var selectedEdgeCount = selectedEdges.length;\n",
+       "           console.log(\"selected nodes: \" + selectedNodeCount);\n",
+       "           console.log(\"selected edGes:\" + selectedEdgeCount);\n",
+       "           var jsonString = JSON.stringify({cmd: \"updateSelectedNodes\",\n",
+       "                                            status: \"request\",\n",
+       "                                            callback: \"\",\n",
+       "                                            payload: selectedNodeIDs});\n",
+       "           console.log(\" *** jsonString: \")\n",
+       "           console.log(jsonString);\n",
+       "           cyjsWidget.model.set(\"msgFromBrowser\", jsonString);\n",
+       "           console.log(\"    after setting 'msgFromBrowser\");\n",
+       "           cyjsWidget.touch();\n",
+       "           },\n",
+       "        \n",
        "        loadStyle: function(filename){\n",
        "           var cyObj = this.cy;\n",
        "           console.log(\"cyjsWidget.loadStyle: \" + filename)\n",
@@ -615,18 +614,18 @@
     "            cyjsWidget.cy.layout({\"name\": \"grid\"});\n",
     "            console.log(\"    back from loadGraph\")\n",
     "            cyjsWidget.cy.on(\"select\", function(){\n",
-    "                upsateSelectionToKernel(cyjsWidget);\n",
-    "                 });\n",
+    "               console.log(\"calling updateSelectionToKernel, on select\");\n",
+    "               cyjsWidget.updateSelectionToKernel(cyjsWidget);\n",
+    "               });\n",
     "            cyjsWidget.cy.on(\"unselect\", function(){\n",
-    "                var selectedNodeCount = cyjsWidget.cy.nodes(\":selected\").length;\n",
-    "                var selectedEdgeCount = cyjsWidget.cy.edges(\":selected\").length;\n",
-    "                console.log(\"selected nodes: \" + selectedNodeCount);\n",
-    "                console.log(\"selected edges:\" + selectedEdgeCount);\n",
-    "                });\n",
+    "               console.log(\"calling updateSelectionToKernel, on unselect\");\n",
+    "               cyjsWidget.updateSelectionToKernel(cyjsWidget);\n",
+    "               });\n",
     "            } // ready\n",
     "           })},\n",
     "\n",
     "        updateSelectionToKernel: function(cyjsWidget){\n",
+    "           console.log(\"*** entering updateSelectionToKernel\") \n",
     "           var selectedNodes = cyjsWidget.cy.nodes(\":selected\");\n",
     "           var selectedNodeIDs = selectedNodes.map(function(n){return (n.id() )})\n",
     "           var selectedEdges = cyjsWidget.cy.edges(\":selected\");\n",
@@ -643,7 +642,7 @@
     "           cyjsWidget.model.set(\"msgFromBrowser\", jsonString);\n",
     "           console.log(\"    after setting 'msgFromBrowser\");\n",
     "           cyjsWidget.touch();\n",
-    "           }\n",
+    "           },\n",
     "        \n",
     "        loadStyle: function(filename){\n",
     "           var cyObj = this.cy;\n",
@@ -781,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -793,14 +792,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget": "40ba361c01dc4354b2f3acf25113a267"
+      "application/vnd.jupyter.widget": "0ea6fcf66d3a4afe99b1bc17b599ad92"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -812,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false
    },
@@ -823,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -831,35 +830,16 @@
     {
      "data": {
       "text/plain": [
-       "['0', '1', '2']"
+       "[]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cy.selectedNodes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(cy.getSelectedNodes())"
+    "cy.getSelectedNodes()"
    ]
   },
   {
