py clearSelection()  now sends a cleanSlate message to guarantee novelty

--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
@@ -234,7 +234,7 @@
     "    def fit(self, margin=50):\n",
     "      self.status += \"entering fit (%d)\\n\" % margin\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"fit\", \"status\": \"request\",\n",
-    "                                              \"callback\": \"\", \"payload\": margin});\n",
+    "                                       \"callback\": \"\", \"payload\": margin});\n",
     "        \n",
     "    def getSelectedNodes(self):\n",
     "       return(self._selectedNodes);\n",
@@ -244,6 +244,8 @@
     "                                       \"callback\": \"\", \"payload\": nodes});\n",
     "       \n",
     "    def clearSelection(self):\n",
+    "      self. msgFromKernel = json.dumps({\"cmd\": \"freshStart\", \"status\": \"nop\",\n",
+    "                                        \"callback\": \"\", \"payload\": \"\"});\n",
     "      self. msgFromKernel = json.dumps({\"cmd\": \"clearSelection\", \"status\": \"request\",\n",
     "                                        \"callback\": \"\", \"payload\": \"\"});\n",
     "        \n",
@@ -267,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -780,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
@@ -792,14 +794,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget": "0ea6fcf66d3a4afe99b1bc17b599ad92"
+      "application/vnd.jupyter.widget": "d5ee736b1b6d4ea4b1c0330ba5d3e45d"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -811,18 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "cy.clearSelection()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
@@ -830,10 +821,10 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['3']"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,403 +835,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "initial status message\n",
-      "msgFromBrowser has arrived: 1480543758.311883\n",
-      "msgFromBrowser has arrived: 1480543760.035023\n",
-      "msgFromBrowser has arrived: 1480543760.962081\n",
-      "msgFromBrowser has arrived: 1480543773.964064\n",
-      "msgFromBrowser has arrived: 1480543871.014011\n",
-      "msgFromBrowser has arrived: 1480543882.576188\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(cy.status)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "time.sleep(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 233,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# cy.getResponse()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 234,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# cy.getFullResponse()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 235,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "cy.selectNodes([\"MAG\", \"PLD2\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 236,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# cy.getSelectedNodes()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# cy.getResponse()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import IPython, zmq\n",
-    "ipython = IPython.get_ipython()\n",
-    "hasattr(ipython, 'kernel')\n",
-    "ioloop = zmq.eventloop.ioloop.IOLoop.instance()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<zmq.eventloop.ioloop.ZMQIOLoop at 0x103bd5630>"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ioloop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def work():\n",
-    "    for i in range(10):\n",
-    "        def update_progress(i=i):\n",
-    "            print(\"calling from thread\", threading.currentThread())\n",
-    "        print(i)\n",
-    "        time.sleep(0.5)\n",
-    "        ioloop.add_callback(update_progress)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import threading\n",
-    "thread = threading.Thread(target=work)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "calling from thread <_MainThread(MainThread, started 140735095894016)>\n",
-      "2calling from thread <_MainThread(MainThread, started 140735095894016)>\n",
-      "\n",
-      "3\n",
-      "calling from thread <_MainThread(MainThread, started 140735095894016)>\n",
-      "4\n",
-      "calling from thread <_MainThread(MainThread, started 140735095894016)>\n",
-      "5\n",
-      "calling from thread <_MainThread(MainThread, started 140735095894016)>\n",
-      "6\n",
-      "calling from thread <_MainThread(MainThread, started 140735095894016)>\n",
-      "7\n",
-      "calling from thread <_MainThread(MainThread, started 140735095894016)>\n",
-      "8\n",
-      "calling from thread <_MainThread(MainThread, started 140735095894016)>\n",
-      "9\n",
-      "calling from thread <_MainThread(MainThread, started 140735095894016)>\n",
-      "calling from thread <_MainThread(MainThread, started 140735095894016)>\n"
-     ]
-    }
-   ],
-   "source": [
-    "thread.start()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/json": {
-       "cell": {
-        "!": "OSMagics",
-        "HTML": "Other",
-        "SVG": "Other",
-        "bash": "Other",
-        "capture": "ExecutionMagics",
-        "debug": "ExecutionMagics",
-        "file": "Other",
-        "html": "DisplayMagics",
-        "javascript": "DisplayMagics",
-        "latex": "DisplayMagics",
-        "perl": "Other",
-        "prun": "ExecutionMagics",
-        "pypy": "Other",
-        "python": "Other",
-        "python2": "Other",
-        "python3": "Other",
-        "ruby": "Other",
-        "script": "ScriptMagics",
-        "sh": "Other",
-        "svg": "DisplayMagics",
-        "sx": "OSMagics",
-        "system": "OSMagics",
-        "time": "ExecutionMagics",
-        "timeit": "ExecutionMagics",
-        "writefile": "OSMagics"
-       },
-       "line": {
-        "alias": "OSMagics",
-        "alias_magic": "BasicMagics",
-        "autocall": "AutoMagics",
-        "automagic": "AutoMagics",
-        "autosave": "KernelMagics",
-        "bookmark": "OSMagics",
-        "cat": "Other",
-        "cd": "OSMagics",
-        "clear": "KernelMagics",
-        "colors": "BasicMagics",
-        "config": "ConfigMagics",
-        "connect_info": "KernelMagics",
-        "cp": "Other",
-        "debug": "ExecutionMagics",
-        "dhist": "OSMagics",
-        "dirs": "OSMagics",
-        "doctest_mode": "BasicMagics",
-        "ed": "Other",
-        "edit": "KernelMagics",
-        "env": "OSMagics",
-        "gui": "BasicMagics",
-        "hist": "Other",
-        "history": "HistoryMagics",
-        "install_default_config": "DeprecatedMagics",
-        "install_ext": "ExtensionMagics",
-        "install_profiles": "DeprecatedMagics",
-        "killbgscripts": "ScriptMagics",
-        "ldir": "Other",
-        "less": "KernelMagics",
-        "lf": "Other",
-        "lk": "Other",
-        "ll": "Other",
-        "load": "CodeMagics",
-        "load_ext": "ExtensionMagics",
-        "loadpy": "CodeMagics",
-        "logoff": "LoggingMagics",
-        "logon": "LoggingMagics",
-        "logstart": "LoggingMagics",
-        "logstate": "LoggingMagics",
-        "logstop": "LoggingMagics",
-        "ls": "Other",
-        "lsmagic": "BasicMagics",
-        "lx": "Other",
-        "macro": "ExecutionMagics",
-        "magic": "BasicMagics",
-        "man": "KernelMagics",
-        "matplotlib": "PylabMagics",
-        "mkdir": "Other",
-        "more": "KernelMagics",
-        "mv": "Other",
-        "notebook": "BasicMagics",
-        "page": "BasicMagics",
-        "pastebin": "CodeMagics",
-        "pdb": "ExecutionMagics",
-        "pdef": "NamespaceMagics",
-        "pdoc": "NamespaceMagics",
-        "pfile": "NamespaceMagics",
-        "pinfo": "NamespaceMagics",
-        "pinfo2": "NamespaceMagics",
-        "popd": "OSMagics",
-        "pprint": "BasicMagics",
-        "precision": "BasicMagics",
-        "profile": "BasicMagics",
-        "prun": "ExecutionMagics",
-        "psearch": "NamespaceMagics",
-        "psource": "NamespaceMagics",
-        "pushd": "OSMagics",
-        "pwd": "OSMagics",
-        "pycat": "OSMagics",
-        "pylab": "PylabMagics",
-        "qtconsole": "KernelMagics",
-        "quickref": "BasicMagics",
-        "recall": "HistoryMagics",
-        "rehashx": "OSMagics",
-        "reload_ext": "ExtensionMagics",
-        "rep": "Other",
-        "rerun": "HistoryMagics",
-        "reset": "NamespaceMagics",
-        "reset_selective": "NamespaceMagics",
-        "rm": "Other",
-        "rmdir": "Other",
-        "run": "ExecutionMagics",
-        "save": "CodeMagics",
-        "sc": "OSMagics",
-        "set_env": "OSMagics",
-        "store": "StoreMagics",
-        "sx": "OSMagics",
-        "system": "OSMagics",
-        "tb": "ExecutionMagics",
-        "time": "ExecutionMagics",
-        "timeit": "ExecutionMagics",
-        "unalias": "OSMagics",
-        "unload_ext": "ExtensionMagics",
-        "who": "NamespaceMagics",
-        "who_ls": "NamespaceMagics",
-        "whos": "NamespaceMagics",
-        "xdel": "NamespaceMagics",
-        "xmode": "BasicMagics"
-       }
-      },
-      "text/plain": [
-       "Available line magics:\n",
-       "%alias  %alias_magic  %autocall  %automagic  %autosave  %bookmark  %cat  %cd  %clear  %colors  %config  %connect_info  %cp  %debug  %dhist  %dirs  %doctest_mode  %ed  %edit  %env  %gui  %hist  %history  %install_default_config  %install_ext  %install_profiles  %killbgscripts  %ldir  %less  %lf  %lk  %ll  %load  %load_ext  %loadpy  %logoff  %logon  %logstart  %logstate  %logstop  %ls  %lsmagic  %lx  %macro  %magic  %man  %matplotlib  %mkdir  %more  %mv  %notebook  %page  %pastebin  %pdb  %pdef  %pdoc  %pfile  %pinfo  %pinfo2  %popd  %pprint  %precision  %profile  %prun  %psearch  %psource  %pushd  %pwd  %pycat  %pylab  %qtconsole  %quickref  %recall  %rehashx  %reload_ext  %rep  %rerun  %reset  %reset_selective  %rm  %rmdir  %run  %save  %sc  %set_env  %store  %sx  %system  %tb  %time  %timeit  %unalias  %unload_ext  %who  %who_ls  %whos  %xdel  %xmode\n",
-       "\n",
-       "Available cell magics:\n",
-       "%%!  %%HTML  %%SVG  %%bash  %%capture  %%debug  %%file  %%html  %%javascript  %%latex  %%perl  %%prun  %%pypy  %%python  %%python2  %%python3  %%ruby  %%script  %%sh  %%svg  %%sx  %%system  %%time  %%timeit  %%writefile\n",
-       "\n",
-       "Automagic is ON, % prefix IS NOT needed for line magics."
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%lsmagic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['network.json',\n",
-       " 'out_file.html',\n",
-       " 'simple.ipynb',\n",
-       " 'style.js',\n",
-       " 'waitOnBrowserResponse.ipynb']"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%system ls\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> \u001b[0;32m<ipython-input-31-4be24dfd3ef9>\u001b[0m(1)\u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m----> 1 \u001b[0;31m\u001b[0mthread\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mthreading\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mThread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mwork\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "ipdb> 2 + 2\n",
-      "4\n"
-     ]
-    }
-   ],
-   "source": [
-    "%debug"
+    "cy.clearSelection()"
    ]
   },
   {
